[package]
name = "muon"
version = "0.1.0"
edition = "2021"
description = "Declarative YAML-based API scenario testing framework"
license = "MIT"
repository = "https://github.com/quantum-box/muon"

[[bin]]
name = "muon"
path = "src/bin/muon.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.68"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
regex = "1"
cel = { version = "0.12.0", features = ["json"] }
url = "2"

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
serde_json = "1.0.95"
tempfile = "3"
